--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"start": "node server.ts",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
@@ -14,6 +15,8 @@
 		"@sveltejs/adapter-node": "^2.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.10.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
@@ -23,6 +26,7 @@
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.16",
+		"express": "^4.18.2",
 		"mysql2": "^3.7.0",
 		"tailwindcss": "^3.4.1"
 	}
