--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,9 +3,11 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "concurrently \"npm run client\" \"npm run server\"",
 		"build": "vite build",
-		"start": "node server.ts",
+		"start": "ts-node server.ts",
+		"server": "ts-node-dev --inspect --respawn server.ts",
+		"client": "vite dev",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
@@ -19,6 +21,7 @@
 		"@types/node": "^20.10.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"ts-node-dev": "^2.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
@@ -26,8 +29,11 @@
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.16",
+		"concurrently": "^8.2.2",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mysql2": "^3.7.0",
+		"node-fetch": "^2.7.0",
 		"tailwindcss": "^3.4.1"
 	}
 }
