--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -1,16 +1,20 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"target":"ESNext",
+		"module":"CommonJS",
+		"moduleResolution":"node",
+		"esModuleInterop":true,
 		"allowJs": true,
 		"checkJs": true,
-		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
-	}
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
